fix thumb opacity on mobile(?)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2837,7 +2837,7 @@
 /* Touch */
 
 	body.is-touch .image.thumb:before {
-		opacity: 0.5 !important;
+		opacity: 0.2 !important;
 	}
 
 	body.is-touch .image.thumb:after {
